bindings/python/pytrine/_binding.py


    # void trine_hebbian_observe(state, a[240], b[240], float similarity)
    lib.trine_hebbian_observe.argtypes = [
        TrineHebbianPtr,
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.POINTER(ctypes.c_uint8),
        ctypes.c_float,
    ]
    lib.trine_hebbian_observe.restype = None

    # void trine_hebbian_observe_text(state, text_a, len_a, text_b, len_b)
    lib.trine_hebbian_observe_text.argtypes = [
        TrineHebbianPtr,
        ctypes.c_char_p,
        ctypes.c_size_t,
        ctypes.c_char_p,
        ctypes.c_size_t,
    ]
    lib.trine_hebbian_observe_text.restype = None

    # int64_t trine_hebbian_train_file(state, path, uint32_t epochs)
    lib.trine_hebbian_train_file.argtypes = [TrineHebbianPtr, ctypes.c_char_p, ctypes.c_uint32]
    lib.trine_hebbian_train_file.restype = ctypes.c_int64

    # trine_s2_model_t *trine_hebbian_freeze(const trine_hebbian_state_t *state)
    lib.trine_hebbian_freeze.argtypes = [TrineHebbianPtr]
    lib.trine_hebbian_freeze.restype = TrineS2ModelPtr

    # int trine_hebbian_metrics(const trine_hebbian_state_t *state, trine_hebbian_metrics_t *out)
    lib.trine_hebbian_metrics.argtypes = [TrineHebbianPtr, ctypes.POINTER(TrineHebbianMetrics)]
    lib.trine_hebbian_metrics.restype = ctypes.c_int

    # void trine_hebbian_reset(trine_hebbian_state_t *state)
    lib.trine_hebbian_reset.argtypes = [TrineHebbianPtr]
    lib.trine_hebbian_reset.restype = None

    # trine_hebbian_config_t trine_hebbian_get_config(const trine_hebbian_state_t *state)
    lib.trine_hebbian_get_config.argtypes = [TrineHebbianPtr]
    lib.trine_hebbian_get_config.restype = TrineHebbianConfig

    # ── Stage-2 Hebbian Threshold Schedule ──────────────────────────

    # void trine_hebbian_set_threshold(trine_hebbian_state_t *state, float threshold)
    lib.trine_hebbian_set_threshold.argtypes = [TrineHebbianPtr, ctypes.c_float]
    lib.trine_hebbian_set_threshold.restype = None

    _lib_cache = lib
    return lib
